--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "gor-calculator",
+  "version": "0.2.0",
   "type": "module",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "spell": "cspell '*.md' 'src/**'"
   },
   "dependencies": {
     "autosuggest-highlight": "^3.3.4",
