--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "spell": "cspell '*.md' 'src/**'"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.2",
     "autosuggest-highlight": "^3.3.4",
     "next": "13.4.9",
     "react": "18.2.0",
